Refactored heap sort into our own version, providing further understanding

--- a/3. Heap Sort.ipynb
+++ b/3. Heap Sort.ipynb
@@ -626,7 +626,7 @@
     {
      "data": {
       "text/plain": [
-       "[5, 9, 7, 1, 4, 10, 2, 8, 6, 3]"
+       "[9, 2, 8, 4, 3, 7, 5, 1, 6, 10]"
       ]
      },
      "execution_count": 32,
@@ -759,7 +759,7 @@
     {
      "data": {
       "text/plain": [
-       "[5, 10, 8, 6, 1, 9, 4, 3, 2, 7]"
+       "[5, 1, 7, 4, 8, 6, 9, 2, 3, 10]"
       ]
      },
      "execution_count": 37,
@@ -787,7 +787,7 @@
     {
      "data": {
       "text/plain": [
-       "44"
+       "42"
       ]
      },
      "execution_count": 38,
@@ -901,6 +901,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b70217a7",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/c/c4/Max-Heap-new.svg/854px-Max-Heap-new.svg.png\" width = \"300px\"></img>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7ae2358d",
    "metadata": {},
    "source": [
@@ -911,113 +919,158 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "1ee5a4d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Put the elements of array 'a', in heap order (in-place)\n",
-    "def heapify(a,count):\n",
-    "    # Assigned to the last parent node\n",
-    "    start = (count - 2) // 2  #iParent(count -1)\n",
-    "    \n",
-    "    while start >= 0:\n",
-    "        # Sift down node at index[start] to it's proper place\n",
-    "        # Done so all nodes bellow start index are in heap order\n",
-    "        siftDown(a,start,count-1)\n",
-    "        \n",
-    "        # Move to the next parent node\n",
-    "        start = start -1 \n",
-    "        \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
    "id": "9a279c8e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Repair heap whose root element is index \"start\"\n",
     "# Assumes the heaps rooted at its children are valid\n",
-    "def siftDown(a,start,end):\n",
-    "    root = start\n",
+    "def siftDown(L,parent,end):  \n",
+    "    \"\"\"L[:end+1] should almost be a max haep.\n",
+    "       siftDown repairs it so that it is one\"\"\"\n",
     "    \n",
-    "    # While the root has atleast one child\n",
-    "    while(2 * root + 1) <= end:\n",
-    "        child = (2 * root + 1)\n",
+    "    # While the parent is actually a parent(has atleast a left child)\n",
+    "    while(2 * parent + 1) <= end:\n",
+    "        # The index of the children of the parent\n",
+    "        lchild = (2 * parent + 1)\n",
+    "        rchild = (2 * parent + 2)\n",
     "        \n",
-    "        # Used to keep track of the child to swap with\n",
-    "        swap = root\n",
+    "        # Assume parent is larger than the children (what is swapped with the parent)\n",
+    "        swap = parent\n",
     "        \n",
-    "        # If: The right child (if present) is greater, swap them\n",
-    "        if a[swap] < a[child]:\n",
-    "            swap = child\n",
-    "        if child + 1 <= end and a[swap] < a[child + 1]:\n",
-    "            swap = child + 1\n",
-    "        if swap == root:\n",
+    "        # If: The left child (if present) is greater, swap them\n",
+    "        if L[swap] < L[lchild]:\n",
+    "            swap = lchild\n",
+    "        # Check if right child exists and is smaller than L[swap]\n",
+    "        if rchild <= end and L[swap] < L[rchild]:\n",
+    "            # Then swap is set to index of right child\n",
+    "            swap = rchild\n",
+    "        # If the parent is bigger than the children, then it is a max heap\n",
+    "        if swap == parent:\n",
     "            return\n",
     "        else:\n",
-    "            a[root], a[swap] = a[swap],a[root]\n",
-    "            root = swap\n",
+    "            # Swap the parent with the bigger child\n",
+    "            L[parent], L[swap] = L[swap],L[parent]\n",
+    "            # Set parent to bigger childs index\n",
+    "            parent = swap\n",
     "            \n",
     "        # Repeats to continue sifting the child"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "id": "196fb57d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def heapsort(a):\n",
-    "    # Input: Sorts unordered array a of length count\n",
-    "    count = len(a)\n",
+    "def heapsort(L):\n",
+    "    \"\"\"Sorts the list L in-place using Heap Sort.\"\"\"\n",
     "    \n",
-    "    # Build heap in array a so largest value is at the root\n",
-    "    heapify(a, count)\n",
+    "    # Turn L into a max heap (a binary tree)\n",
     "    \n",
-    "    # End of the list\n",
-    "    end = count - 1\n",
+    "    # Index of last element\n",
+    "    last_element = len(L) - 1\n",
     "    \n",
+    "    # Find the last parent.\n",
+    "    lastParent = (last_element - 1) // 2  #iParent(count -1)\n",
+    "    \n",
+    "    # Loop backwards through all the parents\n",
+    "    for parent in range(lastParent,-1,-1):\n",
+    "\n",
+    "        # Sift down node at index[start] to it's proper place\n",
+    "        # Done so all nodes below start index are in heap order\n",
+    "        siftDown(L,parent,last_element)\n",
+    "        \n",
+    "    # Segregate the list L into two parts:\n",
+    "    # 1. L[:end] is a max heap\n",
+    "    # 2. Each element beyond end is greater than everything before it\n",
     "    # While there are elements in the heap\n",
-    "    while end > 0:\n",
+    "    for end in range(last_element,0,-1):\n",
+    "       \n",
     "        # Swap largest value in front of sorted elements\n",
-    "        a[0],a[end]  = a[end], a[0]\n",
-    "        \n",
-    "        # Reduce heap size\n",
-    "        end = end -1\n",
-    "        \n",
-    "        siftDown(a,0,end)"
+    "        L[0],L[end]  = L[end], L[0]\n",
+    "        siftDown(L,0,end - 1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "id": "c63d44e1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[7, 8, 9]"
+       "[19, 100, 36, 25, 3, 17, 7, 1, 2]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "L = [9,8,7]\n",
+    "L = [19,100,36,25,3,17,7,1,2]\n",
+    "L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b4d74134",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "end = len(L) - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "8825d81d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[19, 100, 36, 25, 3, 17, 7, 1]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L[:end]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "03229bb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 7, 17, 19, 25, 36, 100]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "heapsort(L)\n",
     "L"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "id": "19926344",
    "metadata": {},
    "outputs": [
@@ -1156,6 +1209,77 @@
     "    L = list(perm)\n",
     "    heapsort(L)\n",
     "    print(f'{perm} -> {L}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "792fcf5c",
+   "metadata": {},
+   "source": [
+    "## Extras\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "22ab1712",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ints are passed by value (copy of variable made)(most primitives as well are)\n",
+    "\n",
+    "a = 1\n",
+    "\n",
+    "# Function: b is a value\n",
+    "def change(b):\n",
+    "    b = 2\n",
+    "\n",
+    "# a is passed by value\n",
+    "change(a)\n",
+    "\n",
+    "# a has not changed\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "a6c290ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 100, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lists are passed by reference (pointer to location in memory)\n",
+    "\n",
+    "# List\n",
+    "a = [1,2,3,4]\n",
+    "\n",
+    "# Function: a is a reference\n",
+    "def change(b):\n",
+    "    # Change an element\n",
+    "    b[2] = 100\n",
+    "    \n",
+    "# Pass list to change\n",
+    "change(a)\n",
+    "\n",
+    "# a has changed\n",
+    "print(a)"
    ]
   },
   {
